--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <title>Meals App</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="{{ url_for('static', filename='javascript/common.js') }}"></script>
 <div class=page>
   {% block body %}<!-- body goes here-->{% endblock body%}
 </div>
