--- a/templates/meal_edit_page.html
+++ b/templates/meal_edit_page.html
@@ -1,14 +1,11 @@
-<div>
-<h6>Edit your meal.</h6>
 <form action="{{ url_for('edit_meals', meal_id=meal.id) }}" method=post class=add-entry>
   <dl>
     <dt>Meal Title:
     <dd><input type=text size=30 name=title value="{{ meal.title }}">
     <dt>Description:
-    <dd><textarea name=description rows=5 cols=40 value= "{{ meal.description }}"></textarea>
+    <dd><textarea name=description rows=5 cols=40>{{ meal.description }}</textarea>
     <dd><input type=checkbox name=active value="{{ meal.active }}">Active<br>
     <dd><input type=input name=price value="{{ meal.price }}">
-    <dd><input type=button value=Save>
+    <dd><input type=button value=Save class="meal-submit">
   </dl>
 </form>
-</div>
