--- a/templates/add_meals.html
+++ b/templates/add_meals.html
@@ -5,11 +5,49 @@
         <form action="{{ url_for('save_meals') }}" method=post class=add-entry>
           <dl>
             <dt>Meal Title:
-            <dd><input type=text size=30 name=title>
+            <dd><input type=text size=30 name=title id="id_title"> 
+                <div id="title_error" style="display:none;color:red">Please provide a title</div>
             <dt>Description:
-            <dd><textarea name=description rows=5 cols=40></textarea>
-            <dd><input type=checkbox name=active value=1>Active<br>
-            <dd><input type=submit value=Save>
+            <dd><textarea name=description rows=5 cols=40 id="id_description"></textarea>
+                <div id="description_error" style="display:none;color:red;">Please enter provide a description</div>
+            <dt>Price:
+            <dd><input type=text size=10 name=price id="id_price"> 
+            <dd><input type=checkbox name=active value=1 id="id_active">Active<br>
+            <dd><input type=submit value=Save id="id_submit">
           </dl>
         </form>
+
+        <script type="text/javascript">
+        $(document).ready(function(){
+          $("#id_submit").click(function(){
+            console.log("click");
+            title = $("#id_title").val();
+            description = $("#id_description").val();
+            price = $("#id_price").val();
+            active= $("#id_active").is(':checked')
+            // if (!active){
+            //     $("#id_active").val("0");
+            // }
+            if (!title){
+                $("#title_error").show();
+                return false;
+            }
+            else{
+                $("#title_error").hide();
+            }
+            if (!description){
+                $("#description_error").show();
+                return false;
+            }
+            else{
+                $("#description_error").hide();
+            }
+            
+
+            return true;
+          });
+        });
+        </script>
     {% endblock body %}
+
+    
